[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "price-tracker-ai-mcp"
version = "0.1.0"
description = "Track product prices across retailers and alert on drops."
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/price-tracker-ai-mcp"
